# HelloPlayer

./: .gitignore  README.md  init.py
framework/handler/: NHandlerThread.cpp  NativeHandler.cpp  NativeHandler.hpp  NativeLooper.cpp  NativeMessageQueue.cpp
framework/log/: Logger.cpp  Logger.hpp
framework/player/: CMakeLists.txt  HelloAVSync.cpp  HelloAVSync.hpp  HelloPlayer.cpp  HelloPlayer.hpp  HelloPlayerCallback.cpp  HelloPlayerCallback.hpp  HelloPlayerError.cpp  HelloPlayerError.hpp
framework/player/clock/: HelloClock.cpp  HelloClock.hpp
framework/player/component/: HelloAVDecoder.cpp  HelloAVDecoder.hpp  HelloAudioPlayer.cpp  HelloAudioPlayer.hpp  HelloDataReader.cpp  HelloDataReader.hpp  HelloProcessor.hpp  HelloVideoPlayer.cpp  HelloVideoPlayer.hpp
framework/player/device/: HelloAVDecoderCore.cpp  HelloAVDecoderCore.hpp  HelloAVDecoderFFmpeg.cpp  HelloAVDecoderFFmpeg.hpp  HelloAudioRender.cpp  HelloAudioRender.hpp  HelloDeviceRegister.hpp  HelloVideoFrame.cpp  HelloVideoFrame.hpp  HelloVideoRender.cpp  HelloVideoRender.hpp
framework/player/entity/: AVProperties.cpp  AVProperties.hpp  IAVFrame.cpp  IAVFrame.hpp  IAVMediaType.hpp  IAVPacket.cpp  IAVPacket.hpp  IAVStream.cpp  IAVStream.hpp  IAVTime.hpp  MediaInfo.hpp  PlayConfig.hpp  PlayRange.cpp  PlayRange.hpp
framework/render/: CMakeLists.txt  HelloEGLContext.cpp  HelloEGLContext.hpp  HelloOpenGLESRender.cpp  HelloOpenGLESRender.hpp  IGLContext.hpp
framework/render/entity/: CMakeLists.txt  HelloVideoTexture.cpp  HelloVideoTexture.hpp
framework/render/filter/: CMakeLists.txt  GLFilterChain.cpp  GLFilterChain.hpp  GLFilterPacket.cpp  GLFilterPacket.hpp  IGLFilterNode.cpp  IGLFilterNode.hpp
framework/render/filter/impl/: Input2Sampler2d.cpp  Input2Sampler2d.hpp  Sampler2D2Surface.cpp  Sampler2D2Surface.hpp  ScaleTypeFilter.cpp  ScaleTypeFilter.hpp  Texture2Texture.cpp  Texture2Texture.hpp
framework/render/glm/ext/: matrix_transform.hpp
framework/render/glm/gtx/: color_space.hpp  integer.hpp  quaternion.hpp  scalar_relational.hpp
framework/render/program/: CMakeLists.txt  GLSLUtil.cpp  GLSLUtil.hpp  IGLProgram.cpp  IGLProgram.hpp  NV12GLProgram.cpp  NV12GLProgram.hpp  Sampler2DProgram.cpp  Sampler2DProgram.hpp  ScaleTypeGLProgram.cpp  ScaleTypeGLProgram.hpp  YUVGLProgram.cpp  YUVGLProgram.hpp
framework/render/program/entity/: TextureData.cpp  TextureData.hpp
framework/util/: AudioController.cpp  AudioController.hpp  CMakeLists.txt  FFUtil.cpp  FFUtil.hpp  FileUtil.cpp  FileUtil.hpp  TcpUtil.cpp  TcpUtil.h  TimeUtil.cpp  TimeUtil.hpp  VideoConverter.cpp  VideoConverter.hpp  audioresampler.c  audioresampler.h
framework/util/h26x_sps_parse/: CMakeLists.txt
platform/android/: .gitignore  helloplayer.jks  settings.gradle.kts
platform/android/app/: build.gradle.kts
platform/android/app/src/main/: AndroidManifest.xml
platform/android/gradle/: libs.versions.toml
platform/android/gradle/wrapper/: gradle-wrapper.properties
platform/ios/: README.md
platform/ios/example/example/: AppDelegate.h  AppDelegate.mm  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.mm  main.m
platform/ios/example/example.xcodeproj/: project.pbxproj
platform/ios/example/example.xcodeproj/xcshareddata/xcschemes/: example.xcscheme
platform/ios/helloplayer.xcworkspace/: contents.xcworkspacedata
platform/ios/helloplayer.xcworkspace/xcuserdata/lhl.xcuserdatad/: UserInterfaceState.xcuserstate
platform/ios/helloplayer.xcworkspace/xcuserdata/lhl.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
platform/ios/helloplayer/helloplayer/: HelloPlayerView.h  HelloPlayerView.mm  helloplayer.h  helloplayer.mm
platform/ios/helloplayer/helloplayer.xcodeproj/: project.pbxproj
platform/ios/helloplayer/helloplayer/platform/player/: HelloPlayerError.h  HelloPlayerState.h  HelloiOSCallback.hpp  HelloiOSCallback.mm  HelloiOSCallbackCtx.hpp  HelloiOSCallbackCtx.mm  HelloiOSRegister.mm
platform/ios/helloplayer/helloplayer/platform/render/: HelloAudioUnitRender.hpp  HelloAudioUnitRender.mm  HelloEAGLContext.hpp  HelloEAGLContext.mm  HelloOpenGLESRender.hpp  HelloOpenGLESRender.mm
platform/ohos/: .gitignore  README.md  build-profile.json5
platform/ohos/AppScope/: app.json5
platform/ohos/entry/: .gitignore  oh-package-lock.json5  oh-package.json5
platform/ohos/helloplayer/: Index.ets  README.md  build-profile.json5  oh-package-lock.json5  oh-package.json5  push-publich-repo.sh
platform/ohos/helloplayer/src/main/: module.json5
platform/ohos/helloplayer/src/main/cpp/: CMakeLists.txt  napi_init.cpp
platform/ohos/helloplayer/src/main/cpp/player/: CMakeLists.txt  HelloOhosCallback.cpp  HelloOhosCallback.hpp  HelloOhosCallbackCtx.hpp  HelloOhosRegister.cpp  NapiCallback.cpp  NapiCallback.hpp  NapiCallbackData.cpp  NapiCallbackData.hpp  OnBufferPositionCallback.cpp  OnBufferPositionCallback.hpp  OnCurrentPositionCallback.cpp  OnCurrentPositionCallback.hpp  OnErrorInfoCallback.cpp  OnErrorInfoCallback.hpp  OnPlayStateChangedCallback.cpp  OnPlayStateChangedCallback.hpp  OnPreparedCallback.cpp  OnPreparedCallback.hpp
platform/ohos/helloplayer/src/main/cpp/player/device/: HelloVideoDecoderOhos.cpp  HelloVideoDecoderOhos.hpp
platform/ohos/helloplayer/src/main/cpp/render/: HelloEGLContext.cpp  HelloEGLContext.hpp  HelloOhosAudioRender.cpp  HelloOhosAudioRender.hpp  HelloOpenGLESRender.hpp
platform/ohos/helloplayer/src/main/cpp/types/libhelloplayer/: Index.d.ts  oh-package.json5
platform/ohos/helloplayer/src/ohosTest/: module.json5
(+55 files in other folders)
